# llmlocal

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SPEC.md
data/: sample.md
deploy/: podman-compose.gpu.yml  podman-compose.yml
docs/: story-comment-scoring-notes.md
docs/superpowers/plans/: 2026-07-05-comment-classification-endpoint.md
restapi/: api.http
scripts/: detect-gpu.sh  dev-up.sh  download-models.sh  eval_story_comments.py  start.sh
src/: classify.rs  comment_classify.rs  config.rs  extract.rs  lib.rs  state.rs
src/api/: handlers.rs  mod.rs
src/embed/: mod.rs
src/ingest/: chunk.rs  mod.rs  parse.rs
src/llm/: mod.rs
src/rag/: mod.rs
src/router/: examples.rs  mod.rs
src/store/: mod.rs
tests/: test_eval_story_comments.py
