[package]
name = "llmlocal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["multipart"] }
clap = { version = "4.6.1", features = ["derive"] }
dotenvy = "0.15.7"
fastembed = "5.17.2"
jsonschema = "0.46.9"
pdf-extract = "0.12.0"
qdrant-client = "1.18.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
